--- a/src/main/resources/database/config/flyway_d.conf
+++ b/src/main/resources/database/config/flyway_d.conf
@@ -9,7 +9,7 @@
 
 # Flyway properties local database
 # Properties are prefixed with flyway.
-flyway.user=root
+flyway.userEntity=root
 # flyway.password to be supplied to mvn as an argument.  like: -Dflyway.password=secret
 flyway.schemas=idm
 flyway.url=jdbc:mariadb://localhost:3305/
