--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
 			<version>6.1.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.uuid</groupId>
+			<artifactId>java-uuid-generator</artifactId>
+			<version>3.1.4</version>
+		</dependency>
 	</dependencies>
 
 
