--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8086
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mariadb://localhost:3305/identity_management_tool
+spring.datasource.url=jdbc:mariadb://localhost:3305/idm
